🧹 Separate out Pokemon Icon

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -38,3 +38,12 @@ h6 {
   position: absolute;
   overflow: visible;
 }
+
+.flex {
+  display: flex;
+
+  &.center {
+    justify-content: center;
+    align-items: center;
+  }
+}
