--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -42,8 +42,16 @@ h6 {
 .flex {
   display: flex;
 
+  &.column {
+    flex-direction: column;
+  }
+
   &.center {
     justify-content: center;
     align-items: center;
+  }
+
+  &.wrap {
+    flex-wrap: wrap;
   }
 }
