--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,18 @@
+:root {
+  --text-primary: #fafafa;
+  --text-secondary: #d4d4d8;
+  --text-tertiary: #a1a1aa;
+
+  --secondary: #52525b;
+  --tertiary: #3f3f46;
+
+  --background: #18181b;
+}
+
 html,
 body {
-  background-color: #18181b;
+  background-color: var(--background);
+  color: var(--text-tertiary);
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -19,7 +31,17 @@ h3,
 h4,
 h5,
 h6 {
+  color: var(--text-secondary);
   font-weight: 600;
+}
+
+h1,
+h2 {
+  color: var(--text-primary);
+}
+
+h2 {
+  font-size: 2rem;
 }
 
 * {
