--- a/styles/Location.module.scss
+++ b/styles/Location.module.scss
@@ -57,3 +57,20 @@
     background-color: darken(#b45309, 10%);
   }
 }
+
+.listing {
+  &DeleteButton {
+    color: var(--text-caption);
+    border-color: transparent;
+    background: transparent;
+
+    &:hover {
+      color: #ef4444;
+    }
+  }
+}
+
+.deleteConfirm {
+  max-width: 260px;
+  margin: 0;
+}
