--- a/styles/Timeline.module.scss
+++ b/styles/Timeline.module.scss
@@ -8,7 +8,7 @@
 
       border-top: 1px solid var(--secondary);
       border-bottom: 1px solid var(--secondary);
-      background: lighten(#18181b, 3%);
+      background: var(--tertiary50);
 
       font-weight: 400;
       font-size: 0.75rem;
