--- a/styles/Pokemon.module.scss
+++ b/styles/Pokemon.module.scss
@@ -25,3 +25,19 @@
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 24px;
 }
+
+.icon {
+  &Avatar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+
+    img {
+      max-width: 40px;
+      max-height: 40px;
+    }
+  }
+}
