--- a/styles/Timeline.module.scss
+++ b/styles/Timeline.module.scss
@@ -37,3 +37,15 @@
     }
   }
 }
+
+@media only screen and (max-width: 600px) {
+  .table tr td:last-of-type,
+  .table tr th:last-of-type {
+    display: none;
+  }
+
+  .table thead tr th:nth-last-child(2) {
+    border-radius: 0 4px 4px 0;
+    border-right: 1px solid var(--secondary);
+  }
+}
