🎨 Updated modal designs

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -140,7 +140,7 @@ p.caption {
 
 .ant-select:not(.ant-select-customize-input) .ant-select-selector,
 .ant-input {
-  border-color: var(--tertiary);
+  border-color: var(--secondary);
 }
 
 .ant-modal .ant-picker-clear,
