--- a/styles/Pokemon.module.scss
+++ b/styles/Pokemon.module.scss
@@ -41,3 +41,33 @@
     }
   }
 }
+
+.modal {
+  &Header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 24px;
+
+    &Img {
+      margin-top: -24px;
+      margin-bottom: -6px;
+    }
+
+    h4,
+    h3 {
+      margin: 0;
+    }
+
+    h4 {
+      color: var(--text-caption);
+      text-transform: capitalize;
+      line-height: 1em;
+    }
+
+    &Tag {
+      font-size: 0.6rem;
+      line-height: 1rem;
+    }
+  }
+}
