--- a/styles/Pokemon.module.scss
+++ b/styles/Pokemon.module.scss
@@ -31,13 +31,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 40px;
-    height: 40px;
     border-radius: 50%;
+    position: relative;
 
     img {
-      max-width: 40px;
-      max-height: 40px;
+      max-width: 100%;
+      max-height: 100%;
     }
   }
 }
