🎖 Better styles for the Graveyard

--- a/styles/Summary.module.scss
+++ b/styles/Summary.module.scss
@@ -87,6 +87,14 @@
   &Header {
     display: flex;
     justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    width: 100%;
+  }
+
+  &Divider {
+    flex: 1;
+    border-bottom: 1px solid var(--tertiary);
   }
 
   &sContainer {
@@ -95,6 +103,8 @@
     flex-wrap: wrap;
     gap: 2rem;
     width: 100%;
+
+    margin-top: -1rem;
   }
 
   & {
@@ -105,18 +115,25 @@
     flex: 1 0;
     position: relative;
     min-width: 240px;
+  }
 
-    &.onRight {
-      align-items: flex-end;
-      .gravePokemon {
-        justify-content: flex-end;
-      }
+  &.onRight {
+    align-items: flex-end;
+    .gravePokemon {
+      justify-content: flex-end;
     }
+  }
+
+  &Count {
+    color: var(--text-caption);
+    padding: 0 0.2rem;
+    margin-bottom: 0.4rem;
   }
 
   &Pokemon {
     display: flex;
     justify-content: flex-start;
     flex-wrap: wrap;
+    gap: 6px;
   }
 }
