🎖 Update nickname and playerName styles

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Teko:wght@300&display=swap");
+
 :root {
   --text-primary: #f8fafc;
   --text-secondary: #e2e8f0;
