--- a/styles/Summary.module.scss
+++ b/styles/Summary.module.scss
@@ -35,6 +35,7 @@
     flex: 1 0;
     position: relative;
     min-width: 240px;
+    margin-top: 1.8rem;
   }
 
   &sContainer {
@@ -46,11 +47,22 @@
   }
 
   .pokemon {
+    position: relative;
     width: 16%;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     z-index: 1;
+
+    .nickname {
+      background: var(--tertiary);
+      margin-left: -32%;
+      padding: 0.1rem 0.4rem 0;
+      border-radius: 4px;
+      white-space: nowrap;
+      text-transform: uppercase;
+      font-family: "Teko";
+    }
   }
 
   img {
@@ -61,9 +73,10 @@
   }
 
   .onRight {
-    align-items: flex-end;
-
     img {
+      margin-right: -32%;
+    }
+    .nickname {
       margin-right: -32%;
     }
   }
@@ -75,7 +88,7 @@
 
   .playerName {
     position: absolute;
-    top: -10%;
+    top: -42%;
     color: var(--tertiary);
     font-size: 4rem;
     font-weight: bold;
@@ -83,7 +96,7 @@
   }
 }
 
-.grave {
+.section {
   &Header {
     display: flex;
     justify-content: center;
@@ -96,7 +109,9 @@
     flex: 1;
     border-bottom: 1px solid var(--tertiary);
   }
+}
 
+.grave {
   &sContainer {
     display: flex;
     justify-content: space-around;
