--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -11,6 +11,10 @@
   --tertiary50: #33415585;
   --background: #1e293b;
 
+  --brand: #a8ff78;
+  --brand50: #a7ff784b;
+  --brand-secondary: #78ffd6;
+
   --pink-text: #f9a8d4;
   --pink-border: #ec4899;
   --pink-background: #ec489994;
