--- a/styles/Run.module.scss
+++ b/styles/Run.module.scss
@@ -15,3 +15,44 @@
 .tabs {
   width: 100%;
 }
+
+.innerContainer {
+  min-height: 100vh;
+  padding: 0 0.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.main {
+  padding: 5rem 0;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.affix {
+  position: fixed;
+  right: 16px;
+  bottom: 16px;
+
+  border-radius: 50%;
+  width: 32px;
+  height: 32px;
+
+  opacity: 0.2;
+  transition: opacity 0.4s;
+
+  cursor: pointer;
+}
+
+.affix:hover {
+  opacity: 1;
+}
+
+.affix a {
+  color: unset;
+}
