--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -123,7 +123,7 @@
     var(--brand),
     var(--brand-secondary) 60%
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  color: var(--background);
+  color: var(--background) !important;
 }
 
 .secondaryButton:hover,
