🧼 Migrate Box to hooks

--- a/styles/Summary.module.scss
+++ b/styles/Summary.module.scss
@@ -125,6 +125,7 @@
   &.onRight {
     align-items: flex-end;
     .gravePokemon {
+      flex-direction: row-reverse;
       justify-content: flex-end;
     }
   }
