--- a/styles/Timeline.module.scss
+++ b/styles/Timeline.module.scss
@@ -7,9 +7,9 @@
     th {
       padding: 8px 12px;
 
-      border-top: 1px solid var(--secondary);
-      border-bottom: 1px solid var(--secondary);
-      background: var(--tertiary50);
+      border-top: 1px solid var(--midnight-hover);
+      border-bottom: 1px solid var(--midnight-hover);
+      background: var(--midnight-disabled);
 
       font-weight: 400;
       font-size: 0.75rem;
@@ -19,12 +19,12 @@
 
     th:first-of-type {
       border-radius: 4px 0 0 4px;
-      border-left: 1px solid var(--secondary);
+      border-left: 1px solid var(--midnight-hover);
     }
 
     th:last-of-type {
       border-radius: 0 4px 4px 0;
-      border-right: 1px solid var(--secondary);
+      border-right: 1px solid var(--midnight-hover);
     }
   }
 
@@ -32,7 +32,7 @@
     tr td {
       padding: 8px 12px;
 
-      border-bottom: 1px solid var(--tertiary);
+      border-bottom: 1px solid var(--midnight-primary);
 
       text-transform: capitalize;
     }
@@ -81,6 +81,6 @@
 
   .table thead tr th:nth-last-child(2) {
     border-radius: 0 4px 4px 0;
-    border-right: 1px solid var(--secondary);
+    border-right: 1px solid var(--midnight-hover);
   }
 }
