--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -24,7 +24,7 @@
 .footer {
   width: 100%;
   height: 100px;
-  background: var(--tertiary50);
+  background: var(--midnight-disabled);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -39,7 +39,7 @@
 }
 
 .footer a:hover {
-  color: var(--brand);
+  color: var(--purple-primary);
 }
 
 .title,
@@ -56,28 +56,28 @@
 }
 
 .highlight {
-  color: var(--text-secondary);
+  color: var(--text-primary);
   cursor: pointer;
   transition: all 0.2s;
 }
 .highlight:hover,
 .highlight:focus,
 .highlight:active {
-  color: var(--text-secondary);
+  color: var(--text-primary);
   font-style: italic;
 }
 
 .title {
-  background: var(--brand); /* fallback for old browsers */
+  background: var(--purple-primary); /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to right bottom,
-    var(--brand),
-    var(--brand-secondary)
+    var(--purple-primary),
+    var(--yellow-primary)
   ); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(
     to right bottom,
-    var(--brand),
-    var(--brand-secondary)
+    var(--purple-primary),
+    var(--yellow-primary)
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
   background-clip: text;
@@ -92,16 +92,16 @@
 /* //* Buttons */
 
 .actionButton {
-  background: var(--brand); /* fallback for old browsers */
+  background: var(--purple-primary); /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to right bottom,
-    var(--brand) 10%,
-    var(--brand-secondary)
+    var(--purple-primary) 10%,
+    var(--yellow-primary)
   ); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(
     to right bottom,
-    var(--brand) 10%,
-    var(--brand-secondary)
+    var(--purple-primary) 10%,
+    var(--yellow-primary)
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   border-color: none;
 
@@ -112,16 +112,16 @@
 .actionButton:hover,
 .actionButton:focus,
 .actionButton:active {
-  background: var(--brand); /* fallback for old browsers */
+  background: var(--purple-primary); /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to right bottom,
-    var(--brand),
-    var(--brand-secondary) 60%
+    var(--purple-primary),
+    var(--yellow-primary) 60%
   ); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(
     to right bottom,
-    var(--brand),
-    var(--brand-secondary) 60%
+    var(--purple-primary),
+    var(--yellow-primary) 60%
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: var(--background) !important;
 }
@@ -129,6 +129,6 @@
 .secondaryButton:hover,
 .secondaryButton:focus,
 .secondaryButton:active {
-  border-color: var(--brand50);
-  color: var(--brand);
+  border-color: var(--purple-hover);
+  color: var(--purple-primary);
 }
